Added tab for statistics page

--- a/StatisticsCalculator/StatisticsCalculator/MainPage.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/MainPage.xaml
@@ -7,4 +7,5 @@
              mc:Ignorable="d"
              x:Class="StatisticsCalculator.MainPage">
     <views:SamplePage/>
+    <views:StatisticsPage/>
 </TabbedPage>
