--- a/StatisticsCalculator/StatisticsCalculator/Views/StatisticsPage.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/StatisticsPage.xaml
@@ -15,6 +15,8 @@
             <Label Text="{Binding Result}"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            <Button Text="Media"
+                    Command="{Binding MeanCommand}"/>
             <Button Text="Σx^2"
                     Command="{Binding SumOfSquareCommand}"/>
             <Button Text="Σx"
