--- a/StatisticsCalculator/StatisticsCalculator/Views/StatisticsPage.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/StatisticsPage.xaml
@@ -15,6 +15,8 @@
             <Label Text="{Binding Result}"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            <Button Text="Moda"
+                    Command="{Binding ModeCommand}"/>
             <Button Text="Mediana"
                     Command="{Binding MedianCommand}"/>
             <Button Text="Media"
