--- a/StatisticsCalculator/StatisticsCalculator/Views/SamplePage.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/SamplePage.xaml
@@ -19,10 +19,15 @@
         <StackLayout VerticalOptions="Center"
                      BindingContext="{StaticResource SampleVM}">
             <StackLayout Orientation="Horizontal">
+                <Label Text="{Binding SampleItems.Count, StringFormat='n = {0}'}"
+                       TextColor="Black"
+                       HorizontalOptions="Start"
+                       VerticalOptions="Center"
+                       Margin="50, 0, 0, 0"/>
                 <Label Text="Amostra"
                        TextColor="Black"
                        HorizontalOptions="Center"
-                       Margin="160, 0, 0, 0"
+                       Margin="70, 0, 0, 0"
                        VerticalOptions="Center" />
                 <Button Text="Limpar"
                         HorizontalOptions="EndAndExpand"
