Clear entry text on add new sample item

--- a/StatisticsCalculator/StatisticsCalculator/Views/SamplePage.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/SamplePage.xaml
@@ -51,7 +51,8 @@
                 </CollectionView>
             </ContentView>
 
-            <Entry x:Name="SampleItemEntry" Keyboard="Numeric"/>
+            <Entry x:Name="SampleItemEntry" Keyboard="Numeric"
+                   Text="{Binding EntrySampleText}"/>
             <Button Text="Adicionar"
                     Margin="60, 0"
                     Command="{Binding AddSampleItemCommand}"
