--- a/StatisticsCalculator/StatisticsCalculator/Views/SamplePage.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/SamplePage.xaml
@@ -52,7 +52,8 @@
             </ContentView>
 
             <Entry x:Name="SampleItemEntry" Keyboard="Numeric"
-                   Text="{Binding EntrySampleText}"/>
+                   Text="{Binding EntrySampleText}"
+                   Placeholder="Novo valor..."/>
             <Button Text="Adicionar"
                     Margin="60, 0"
                     Command="{Binding AddSampleItemCommand}"
