--- a/StatisticsCalculator/StatisticsCalculator/Views/SampleItemView.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/SampleItemView.xaml
@@ -4,8 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="StatisticsCalculator.Views.SampleItemView"
-             HeightRequest="45">
+             x:Class="StatisticsCalculator.Views.SampleItemView">
   <ContentView.Content>
         <Frame Padding="0">
             <StackLayout Orientation="Horizontal">
