--- a/StatisticsCalculator/StatisticsCalculator/Views/StatisticsPage.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/StatisticsPage.xaml
@@ -4,20 +4,12 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:StatisticsCalculator.ViewModels"
+             xmlns:translator="clr-namespace:StatisticsCalculator.Translation"
              mc:Ignorable="d"
              x:Class="StatisticsCalculator.Views.StatisticsPage"
-             Title="Estatística">
+             Title="{translator:Translate StatisticsTabLabel}">
     <ContentPage.Resources>
         <viewModels:StatisticsViewModel x:Key="StatisticsVM"/>
-        <x:String x:Key="SumOfItemsLabel">Soma dos itens</x:String>
-        <x:String x:Key="SumOfSquareLabel">Soma dos quadrados dos itens</x:String>
-        <x:String x:Key="MeanLabel">Média</x:String>
-        <x:String x:Key="MedianLabel">Mediana</x:String>
-        <x:String x:Key="ModeLabel">Moda</x:String>
-        <x:String x:Key="SampleStandardDeviationLabel">Desvio padrão da amostra</x:String>
-        <x:String x:Key="PopulationStandardDeviationLabel">Desvio padrão da população</x:String>
-        <x:String x:Key="SampleVarianceLabel">Variância da amostra</x:String>
-        <x:String x:Key="PopulationVarianceLabel">Variância da população</x:String>
         <Style Class="ResultLabel" TargetType="Label">
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="HorizontalOptions" Value="CenterAndExpand"/>
@@ -66,42 +58,45 @@
                     <ColumnDefinition Width="100"/>
                     <ColumnDefinition Width="100"/>
                 </Grid.ColumnDefinitions>
-                <Button Text="Moda" class="CalculatorButton"
+                <Button Text="{translator:Translate ModeLabel}" 
+                        class="CalculatorButton"
                         Grid.Row="0" Grid.Column="0"
                         Command="{Binding ModeCommand}"
-                        CommandParameter="{DynamicResource ModeLabel}"/>
-                <Button Text="Mediana" class="CalculatorButton"
+                        CommandParameter="{translator:Translate ModeLabel}"/>
+                <Button Text="{translator:Translate MedianLabel}" 
+                        class="CalculatorButton"
                         Grid.Row="0" Grid.Column="1"
                         Command="{Binding MedianCommand}"
-                        CommandParameter="{DynamicResource MedianLabel}"/>
-                <Button Text="Media" class="CalculatorButton"
+                        CommandParameter="{translator:Translate MedianLabel}"/>
+                <Button Text="{translator:Translate MeanLabel}" 
+                        class="CalculatorButton"
                         Grid.Row="0" Grid.Column="2"
                         Command="{Binding MeanCommand}"
-                        CommandParameter="{DynamicResource MeanLabel}"/>
+                        CommandParameter="{translator:Translate MeanLabel}"/>
                 <Button Text="Σx" class="CalculatorButton"
                         Grid.Row="1" Grid.Column="0"
                         Command="{Binding SumCommand}"
-                        CommandParameter="{DynamicResource SumOfItemsLabel}"/>
+                        CommandParameter="{translator:Translate SumOfItemsLabel}"/>
                 <Button Text="Σx^2" class="CalculatorButton"
                         Grid.Row="1" Grid.Column="1"
                         Command="{Binding SumOfSquareCommand}"
-                        CommandParameter="{DynamicResource SumOfSquareLabel}"/>
+                        CommandParameter="{translator:Translate SumOfSquareLabel}"/>
                 <Button Text="σ" class="CalculatorButton"
                         Grid.Row="1" Grid.Column="2"
                         Command="{Binding PopulationStandardDeviationCommand}"
-                        CommandParameter="{DynamicResource PopulationStandardDeviationLabel}"/>
+                        CommandParameter="{translator:Translate PopulationStandardDeviationLabel}"/>
                 <Button Text="σ^2" class="CalculatorButton"
                         Grid.Row="2" Grid.Column="2"
                         Command="{Binding PopulationVarianceCommand}"
-                        CommandParameter="{DynamicResource PopulationVarianceLabel}"/>
+                        CommandParameter="{translator:Translate PopulationVarianceLabel}"/>
                 <Button Text="s" class="CalculatorButton"
                         Grid.Row="2" Grid.Column="0"
                         Command="{Binding SampleStandardDeviationCommand}"
-                        CommandParameter="{DynamicResource SampleStandardDeviationLabel}"/>
+                        CommandParameter="{translator:Translate SampleStandardDeviationLabel}"/>
                 <Button Text="s^2" class="CalculatorButton"
                         Grid.Row="2" Grid.Column="1"
                         Command="{Binding SampleVarianceCommand}"
-                        CommandParameter="{DynamicResource SampleVarianceLabel}"/>
+                        CommandParameter="{translator:Translate SampleVarianceLabel}"/>
             </Grid>
         </StackLayout>
     </ContentPage.Content>
