Display label when sample is empty

--- a/StatisticsCalculator/StatisticsCalculator/Views/SamplePage.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/SamplePage.xaml
@@ -47,6 +47,11 @@
                             <views:SampleItemView Padding="5"/>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
+                    <CollectionView.EmptyView>
+                        <Label Text="{translator:Translate EmptySampleText}" 
+                               HorizontalTextAlignment="Center"
+                               VerticalTextAlignment="Center"/>
+                    </CollectionView.EmptyView>
                 </CollectionView>
             </ContentView>
 
